# pdtk

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
assets/data/: EP2371646B1.response.html  JP6389025B2.response.html  US9145048B2.response.html
development/data/: CN102205844B.response.html  ES2655892T3.response.html  patent_US6179873B1_en.html  patent_US9145048B2_en.html
docker_compose/: docker-compose.yml
pdtk/: __init__.py  config.py  globals.py  models.py
pdtk/concepts/: __init__.py  patent_number.py  types.py  utils.py
pdtk/familizer/: __init__.py  api.py  client.py  config.py  models.py
pdtk/google_patents/: __init__.py  client.py  config.py  exceptions.py  models.py
pdtk/google_patents/utils/: __init__.py  network.py
py_google_patents/: network.py
py_google_patents/api/: __init__.py  data.py
py_google_patents/common/: __init__.py  config.py  error.py
py_google_patents/core/: __init__.py  network.py
py_google_patents/models/: __init__.py  response_models.py
research/: api_sample_responses.json
src/concepts/: __init__.py  patent_number.py  utils.py
src/py_familizer/: __init__.py  api.py  client.py  config.py  models.py
src/py_google_patents/: __init__.py  api_client.py  config.py  models.py  network.py
src/py_google_patents/api/: __init__.py  data.py
src/py_google_patents/common/: __init__.py
src/py_google_patents/core/: data_parsers.py
src/py_google_patents/models/: response_models.py
src/py_google_patents/utils/: __init__.py  network.py
test/: __init__.py
test/core/: __init__.py  test_network.py
test/scripts/: test_async_network_interface.py
tests/: __init__.py  conftest.py  test_api_client.py  test_familizer.py
tests/concepts/: __init__.py  test_PatentNumber.py  test_patent_number.py
tests/data/google_api_patent_data_responses/: patent_CN102205844B_en.html  patent_EP2371646B1_en.html  patent_ES2655892T3_en.html  patent_JP2011213341A_en.html  patent_JP6389025B2_en.html  patent_WO1999006665A1_en.html
tests/familizer/: __init__.py  test_familizer.py
tests/google_patents/: __init__.py  test_client.py  test_models.py
tests/google_patents/utils/: __init__.py  test_network.py
tests/py_familizer/: __init__.py  test_familizer.py
tests/py_google_patents/: __init__.py
tests/utils/: __init__.py  test_network.py
(+2 files in other folders)
