[tool.poetry]
name = "py-google-patents"
version = "0.1.0"
description = ""
authors = ["Kunal Roychoudhury <lanuks97@gmail.com>"]
readme = "README.md"
packages = [
    { include = "py_google_patents", from = "src" }
]
license = "Apache-2.0"
repository = "https://github.com/k-roychoudhury/py_google_patents"
keywords = ["patents", "interface", "parsing", "scraping"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.6"
orjson = "^3.8.7"
pytest = "^7.2.2"
requests = "^2.28.2"
pytest-cov = "^4.0.0"
aiohttp = "^3.8.4"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = "test*.py"
minversion = "7.0"
addopts = "--cov -s --tb=native -p no:doctest -p no:warnings"
norecursedirs = [
    "dist",
    "research",
    "src",
    ".*"
]
looponfailroots = [
    "src",
    "tests"
]
testpaths = [
    "tests"
]


[bdist_wheel]
python-tag = "py311"
