[tool.poetry]
name = "pdtk"
version = "0.1.0"
description = ""
authors = ["Kunal Roychoudhury <lanuks97@gmail.com>"]
readme = "README.md"
packages = [
    { include = "concepts", from = "src"},
    { include = "py_familizer", from = "src" },
    { include = "py_google_patents", from = "src" }
]
license = "Apache-2.0"
repository = "https://github.com/k-roychoudhury/pdtk"
keywords = ["patents", "interface", "parsing", "scraping"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.6"
orjson = "^3.8.7"
requests = "^2.28.2"
aiohttp = "^3.8.4"
bs4 = "^0.0.1"
lxml = "^4.9.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = "test*.py"
minversion = "7.3"
addopts = "-s --cov -vv --tb=native -p no:doctest -p no:warnings"
norecursedirs = [
    "dist",
    "research",
    "src",
    ".*"
]
looponfailroots = [
    "src",
    "tests"
]
testpaths = [
    "tests"
]


[bdist_wheel]
python-tag = "py311"
